--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -14,6 +14,8 @@ blogCategoryType = "category"
 [variables]
 primary_color = "#25BADC"
 light = "#E3F6FC"
+primary_font = "Ubuntu"
+secondary_font = ""
 
 # Preloader
 [preloader]
@@ -34,22 +36,22 @@ content = "This site uses cookies. By continuing to use this website, you agree 
 button = "I Accept"
   
 ############################# social site ########################
-[[social]]
-title = "facebook"
-icon = "fab fa-facebook" # themify icon : https://themify.me/themify-icons
-link = "#"
-
-[[social]]
-title = "twitter"
-icon = "fab fa-twitter" # themify icon : https://themify.me/themify-icons
-link = "#"
-
-[[social]]
-title = "skype"
-icon = "fab fa-skype" # themify icon : https://themify.me/themify-icons
-link = "#"
-
-[[social]]
-title = "linkedin"
-icon = "fab fa-linkedin" # themify icon : https://themify.me/themify-icons
-link = "#"
+# [[social]]
+# title = "facebook"
+# icon = "fab fa-facebook" # themify icon : https://themify.me/themify-icons
+# link = "#"
+# 
+# [[social]]
+# title = "twitter"
+# icon = "fab fa-twitter" # themify icon : https://themify.me/themify-icons
+# link = "#"
+# 
+# [[social]]
+# title = "skype"
+# icon = "fab fa-skype" # themify icon : https://themify.me/themify-icons
+# link = "#"
+# 
+# [[social]]
+# title = "linkedin"
+# icon = "fab fa-linkedin" # themify icon : https://themify.me/themify-icons
+# link = "#"
