--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -5,7 +5,7 @@ title = "Project Radius"
 contentDir = "content"
 weight = 1
 ########### footer content ##########
-footer_menu_left = "Team"
+footer_menu_left = "Guides"
 footer_menu_middle = "Product"
 footer_menu_right = "Support"
 footer_content = "Brought to you by the Azure Incubations team"
