--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -20,41 +20,41 @@ url = "https://aka.ms/ProjectRadius"
 weight = 4
 
 # footer menu left
-[[footer_left]]
-name = "About Us"
-url = "#"
+# [[footer_left]]
+# name = "Concepts"
+# url = "https://docs.radapp.dev/concepts/"
 
-[[footer_left]]
-name = "Quick Start"
-url = "#"
+# [[footer_left]]
+# name = "Developer Guides"
+# url = "https://docs.radapp.dev/author-apps/"
 
-[[footer_left]]
-name = "Pricing"
-url = "pricing/"
+# [[footer_left]]
+# name = "Administrator Guides"
+# url = "https://radapp.dev/operations/"
 
 
 # footer menu middle
-[[footer_middle]]
-name = "Pricing"
-url = "pricing/"
+# [[footer_middle]]
+# name = "Pricing"
+# url = "pricing/"
 
-[[footer_middle]]
-name = "Platform"
-url = "#"
+# [[footer_middle]]
+# name = "Platform"
+# url = "#"
 
-[[footer_middle]]
-name = "Features"
-url = "#"
+# [[footer_middle]]
+# name = "Features"
+# url = "#"
 
 # footer menu right
-[[footer_right]]
-name = "Privacy Policy"
-url = "privacy-policy/"
+# [[footer_right]]
+# name = "Privacy Policy"
+# url = "privacy-policy/"
 
-[[footer_right]]
-name = "Terms & Conditions"
-url = "terms-conditions/"
+# [[footer_right]]
+# name = "Known Limitations"
+# url = "https://docs.radapp.dev/reference/limitations/"
 
-[[footer_right]]
-name = "FAQ"
-url = "faq/"
+# [[footer_right]]
+# name = "FAQ"
+# url = "https://docs.radapp.dev/reference/faq/"
