--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,7 @@
 #################### default parameters ################################
 logo = "images/logo.png"
 logo_width = "200px"
+favicon = "favicon.ico"
 # OpenGraph / Twitter Card metadata
 description = "Project Radius is a cloud-native, portable, application platform"
 author = "Project Radius Core Team"
