Change matching pattern

--- a/static/web.config
+++ b/static/web.config
@@ -4,7 +4,7 @@
         <rewrite>
             <rules>
                 <rule name="Redirect legacy docs paths" stopProcessing="true">
-                    <match url=".*" />
+                    <match url="^/$" />
                     <conditions>
                         <add input="{HTTP_HOST}" pattern="^(www\.)?radapp\.dev$" negate="true" />
                     </conditions>
