--- a/static/web.config
+++ b/static/web.config
@@ -7,6 +7,7 @@
                     <match url="^/$" />
                     <conditions>
                         <add input="{HTTP_HOST}" pattern="^(www\.)?radapp\.dev$" negate="true" />
+                        <add input="{HTTP_HOST}" pattern="^(www\.)?website.radapp\.dev$" negate="true" />
                     </conditions>
                     <action type="Redirect" url="https://docs.radapp.dev/{R:0}" />
                 </rule>
