Simplify matching pattern

--- a/static/web.config
+++ b/static/web.config
@@ -6,8 +6,7 @@
                 <rule name="Redirect legacy docs paths" stopProcessing="true">
                     <match url="^/$" />
                     <conditions>
-                        <add input="{HTTP_HOST}" pattern="^(www\.)?radapp\.dev$" negate="true" />
-                        <add input="{HTTP_HOST}" pattern="^(www\.)?website.radapp\.dev$" negate="true" />
+                        <add input="{HTTP_HOST}" pattern="^(www\.)?(radapp\.dev|website\.radapp\.dev)$" negate="true" />
                     </conditions>
                     <action type="Redirect" url="https://docs.radapp.dev/{R:0}" />
                 </rule>
