--- a/static/web.config
+++ b/static/web.config
@@ -3,12 +3,15 @@
     <system.webServer>
         <rewrite>
             <rules>
-                <rule name="Redirect legacy docs paths" stopProcessing="true">
-                    <match url="^/$" />
+                <rule name="Redirect Non-Root Paths" stopProcessing="true">
+                    <match url=".*" />
                     <conditions>
-                        <add input="{HTTP_HOST}" pattern="^(www\.)?(radapp\.dev|website\.radapp\.dev)$" negate="true" />
+                        <add input="{HTTP_HOST}" pattern="^website.radapp\.dev$" />
+                        <add input="{REQUEST_URI}" pattern="^/$" negate="true" />
+                        <add input="{REQUEST_URI}" pattern="^/favicon\.ico$" negate="true" />
+                        <add input="{REQUEST_URI}" pattern="\.(jpg|jpeg|png|gif|svg)$" negate="true" />
                     </conditions>
-                    <action type="Redirect" url="https://docs.radapp.dev/{R:0}" />
+                    <action type="Redirect" url="http://docs.radapp.dev/{R:0}" appendQueryString="true" />
                 </rule>
             </rules>
         </rewrite>
