--- a/static/web.config
+++ b/static/web.config
@@ -6,7 +6,7 @@
                 <rule name="Redirect Non-Root Paths" stopProcessing="true">
                     <match url=".*" />
                     <conditions>
-                        <add input="{HTTP_HOST}" pattern="^website.radapp\.dev$" />
+                        <add input="{HTTP_HOST}" pattern="^radapp\.dev$" />
                         <add input="{REQUEST_URI}" pattern="^/$" negate="true" />
                         <add input="{REQUEST_URI}" pattern="^/favicon\.ico$" negate="true" />
                         <add input="{REQUEST_URI}" pattern="\.(jpg|jpeg|png|gif|svg)$" negate="true" />
