change mentions of <Project Radius> to just <Radius>
Signed-off-by: Will Tsai <28876888+willtsai@users.noreply.github.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://radapp.dev/"
-title = "Project Radius"
+title = "Radius"
 theme = "bigspring-light"
 disableFastRender = true
 # post pagination
