--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,8 +3,8 @@ logo = "images/logo.png"
 logo_width = "200px"
 favicon = "favicon.ico"
 # OpenGraph / Twitter Card metadata
-description = "Project Radius is a cloud-native, portable, application platform"
-author = "Project Radius Core Team"
+description = "Radius is a cloud-native, portable, application platform"
+author = "Radius Core Team"
 image = "images/logo.png" # this image will be used as fallback if a page has no image of its own
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
