--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     env:
       GOVER: '^1.17'
       HUGO_ENV: production
-      SWA_BASE: 'salmon-meadow-0affa551e'
+      SWA_BASE: 'brave-pond-00b49761e'
     steps:
       - name: Checkout website repo
         uses: actions/checkout@v2
@@ -30,7 +30,7 @@ jobs:
       - name: Build Hugo Site
         run: |
           if [ $GITHUB_EVENT_NAME == 'pull_request' ]; then
-            STAGING_URL="https://${SWA_BASE}-${{github.event.number}}.2.azurestaticapps.net/"
+            STAGING_URL="https://${SWA_BASE}-${{github.event.number}}.3.azurestaticapps.net/"
           fi
           hugo ${STAGING_URL+-b "$STAGING_URL"}
       - name: Upload Hugo artifacts
@@ -42,21 +42,24 @@ jobs:
   
   deploy:
     name: Deploy Hugo Website
-    if: github.event_name == 'push'
     needs: ['build']
     runs-on: ubuntu-latest
     environment:
       name: latest
-      url: https://radapp.dev
+      url: https://radapp.io
     steps:
       - name: Download Hugo artifacts
         uses: actions/download-artifact@v3
         with:
           name: hugo_build
           path: site/
-      - name: Deploy to WebApp
-        uses: Azure/webapps-deploy@v2
+      - name: Deploy staging site
+        uses: Azure/static-web-apps-deploy@v1
         with:
-          app-name: ${{ secrets.ENV_APPSERVICE_NAME }}
-          publish-profile: ${{ secrets.ENV_APPSERVICE_PUBLISHPROFILE }}
-          package: site/
+          azure_static_web_apps_api_token: ${{ secrets.SWA_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: "upload"
+          app_location: "site/"
+          api_location: "site/" 
+          output_location: ""
+          skip_app_build: true
