add link to blog
Signed-off-by: Will Tsai <28876888+willtsai@users.noreply.github.com>

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -19,6 +19,11 @@ name = "Community"
 url = "https://github.com/radius-project/community"
 weight = 4
 
+[[main]]
+name = "Blog"
+url = "https://blog.radapp.io"
+weight = 5
+
 # footer menu left
 [[footer_left]]
 name = "GitHub"
