--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -26,7 +26,7 @@ preloader = "" # use jpg, png, svg or gif format.
 [navigation_button]
 enable = true
 label = "Get Started"
-link = "https://docs.radapp.io/getting-started"
+link = "https://docs.radapp.io/getting-started/"
 
 # cookies
 [cookies]
