Switch instagram to threads icon
Signed-off-by: Aaron Crawfis <aaron.crawfis@microsoft.com>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -38,7 +38,7 @@ button = "I Accept"
 ############################# social site ########################
 [[social]]
 title = "Threads"
-icon = "fab fa-instagram" # themify icon : https://themify.me/themify-icons
+icon = "fab fa-threads" # themify icon : https://themify.me/themify-icons
 link = "https://www.threads.net/@radapp_io"
 
 [[social]]
