CNCF website guidelines
Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -5,9 +5,8 @@ title = "Radius"
 contentDir = "content"
 weight = 1
 ########### footer content ##########
-footer_menu_left = "Community"
-footer_menu_middle = "Product"
-footer_menu_right = "Support"
-footer_content = "Brought to you by the Azure Incubations team"
+footer_menu_left = "Learn"
+footer_menu_middle = "Community"
+footer_menu_right = "News"
 # copyright
 copyright = "© Radius Authors"
