Add discord in the main menu
Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -26,7 +26,7 @@ preloader = "" # use jpg, png, svg or gif format.
 [navigation_button]
 enable = true
 label = "Join our Discord"
-link = "https://aka.ms/Discord"
+link = "https://aka.ms/radius/discord"
 
 # cookies
 [cookies]
