--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -25,8 +25,8 @@ preloader = "" # use jpg, png, svg or gif format.
 # Navigation buttons
 [navigation_button]
 enable = true
-label = "Get Started"
-link = "https://docs.radapp.io/getting-started/"
+label = "Join our Discord"
+link = "https://aka.ms/radius/discord"
 
 # cookies
 [cookies]
