--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,1 @@
-# These owners are the maintainers and approvers of this repo
-*       @radius-project/maintainers-docs @radius-project/approvers-docs
+# See the owners for this repo at .github/CODEOWNERS
