--- a/.github/workflows/spellcheck.yaml
+++ b/.github/workflows/spellcheck.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://www.schemastore.org/github-workflow.json
+---
 name: Spellcheck
 
 on:
@@ -13,7 +15,7 @@ on:
       - edge
 
 env:
-  ACTION_LINK: '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+  ACTION_LINK: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
 concurrency:
   group: spellcheck-${{ github.ref }}-${{ github.event.pull_request.number || github.sha }}
@@ -23,37 +25,42 @@ jobs:
     name: Spellcheck
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout docs
-      uses: actions/checkout@v4
-    - name: Spellcheck
-      uses: rojopolis/spellcheck-github-actions@0.36.0
-      with:
-        config_path: .github/config/.pyspelling.yml
-    - name: Post GitHub workkflow output on failure
-      if: failure()
-      run: |
-        echo "## :x: Spellcheck Failed" >> $GITHUB_STEP_SUMMARY
-        echo "There are spelling errors in your PR. Visit [the workflow output](${{ env.ACTION_LINK }}) to see what words are failing." >> $GITHUB_STEP_SUMMARY
-        echo "### Adding new words" >> $GITHUB_STEP_SUMMARY
-        echo "If you are adding a new custom word refer to the [docs guide](https://docs.radapp.io/contributing/docs/#spelling)" >> $GITHUB_STEP_SUMMARY
-    - name: Post GitHub workflow output on success
-      run: |
-        echo "## :white_check_mark: Spellcheck Passed" >> $GITHUB_STEP_SUMMARY
-        echo "There are no spelling errors in your PR." >> $GITHUB_STEP_SUMMARY
-    - name: Post GitHub comment on failure
-      if: failure()
-      uses: marocchino/sticky-pull-request-comment@v2
-      with:
-        header: spellcheck
-        recreate: true
-        message: |
-          ## :x: Spellcheck Failed
-          There are spelling errors in your PR. Visit [the workflow output](${{ env.ACTION_LINK }}) to see what words are failing.
-          ### Adding new words
-          If you are adding a new custom word refer to the [docs guide](https://docs.radapp.io/contributing/docs/#spelling)
-    - name: Clear GitHub comment on success
-      uses: marocchino/sticky-pull-request-comment@v2
-      continue-on-error: true
-      with:
-        header: spellcheck
-        delete: true
+      - name: Checkout docs
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+
+      - name: Spellcheck
+        uses: rojopolis/spellcheck-github-actions@6f2326b663e2dbab920da0fc4144b9f3202434ba # 0.54.0
+        with:
+          config_path: .github/config/.pyspelling.yml
+
+      - name: Post GitHub workkflow output on failure
+        if: failure()
+        run: |
+          echo "## :x: Spellcheck Failed" >> $GITHUB_STEP_SUMMARY
+          echo "There are spelling errors in your PR. Visit [the workflow output](${{ env.ACTION_LINK }}) to see what words are failing." >> $GITHUB_STEP_SUMMARY
+          echo "### Adding new words" >> $GITHUB_STEP_SUMMARY
+          echo "If you are adding a new custom word refer to the [docs guide](https://docs.radapp.io/contributing/docs/#spelling)" >> $GITHUB_STEP_SUMMARY
+
+      - name: Post GitHub workflow output on success
+        run: |
+          echo "## :white_check_mark: Spellcheck Passed" >> $GITHUB_STEP_SUMMARY
+          echo "There are no spelling errors in your PR." >> $GITHUB_STEP_SUMMARY
+
+      - name: Post GitHub comment on failure
+        if: failure()
+        uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
+        with:
+          header: spellcheck
+          recreate: true
+          message: |
+            ## :x: Spellcheck Failed
+            There are spelling errors in your PR. Visit [the workflow output](${{ env.ACTION_LINK }}) to see what words are failing.
+            ### Adding new words
+            If you are adding a new custom word refer to the [docs guide](https://docs.radapp.io/contributing/docs/#spelling)
+
+      - name: Clear GitHub comment on success
+        uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
+        continue-on-error: true
+        with:
+          header: spellcheck
+          delete: true
